# loot

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
loot/: __init__.py
loot/parsers/: __init__.py  id_validators.py
parsers/: id_validators.py
