[project]
name = "loot"
version = "0.1.0"
description = "Repositório central de ativos de automação e bibliotecas compartilhadas."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",   
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loot"]

[project.urls]
Repository = "https://github.com/QualidadeGestaoBRMED/loot"